[package]
name = "apod"
version = "0.1.0"
authors = ["Guido Knips <guido.knips@posteo.de>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.15", features = ["json", "blocking"] }
serde = { version = "^1.0.158", features = ["derive"] }
serde_json = "^1.0.94"
chrono = { version = "^0.4.24", features = ["serde"] }
bytes = "^1.4.0"
percent-encoding = "^2.3.1"
